Update DefaultProductService.java